--- a/README.org
+++ b/README.org
@@ -14,7 +14,8 @@ It allows the usage of environments with the following format:
 |---------------+----------------------------------------+----------------|
 | ~dev~         | ~^v[0-9]+\.[0-9]+.[0-9]+-dev\.[0-9]+$~ | ~v1.0.1-dev.8~ |
 | ~qa~          | ~^v[0-9]+\.[0-9]+.[0-9]+-qa\.[0-9]+$~  | ~v1.0.1-qa.1~  |
-| ~uat~         | ~v[0-9]+\.[0-9]+.[0-9]+-uat\.[0-9]+$~   | ~v2.2.0-uat.10~ |
+| ~demo~        | ~^v[0-9]+\.[0-9]+.[0-9]+-demo\.[0-9]+$~| ~v1.0.1-demo.2~|
+| ~uat~         | ~v[0-9]+\.[0-9]+.[0-9]+-uat\.[0-9]+$~  | ~v2.2.0-uat.10~|
 | ~staging~     | ~v[0-9]+\.[0-9]+.[0-9]+-rc\.[0-9]+$~   | ~v2.2.0-rc.10~ |
 | ~prod~        | ~v[0-9]+\.[0-9]+.[0-9]+$~              | ~v3.0.5~       |
 |---------------+----------------------------------------+----------------|
